@@ -61,6 +61,8 @@
 
 	* ipmipower: Remove legacy prompt options.
 
+	* ipmi-oem: Remove legacy OEM Inventec commands.
+
 2020-01-28 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
